fix:added z-index to tooltip

--- a/src/components/dashboard/aoi-list/aoi-list.css
+++ b/src/components/dashboard/aoi-list/aoi-list.css
@@ -66,12 +66,11 @@
 }
 .select-row {
   background-color: #343a3f;
-  z-index: -1;
 }
 
 .aoi-table tbody tr {
   position: relative;
-  z-index: 1;
+
   transition: background-color 0.5s ease-out;
 }
 
@@ -84,7 +83,6 @@
 }
 
 .aoi-table tbody tr:hover .tooltip-box {
-  z-index: 3;
   visibility: visible;
 }
 
